[package]
name = "track-work"
version = "0.1.0"
authors = ["Edward Waterman <edward.waterman@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.17"
structopt = "0.3.17"
anyhow = "1.0.32"
csv = "1.1.3"
console = "0.12.0"
dotenv = "0.15.0"
ctrlc = "3.1.6"
crossbeam-channel = "0.4.4"
