[package]
name = "track-work"
version = "0.1.4"
authors = ["Edward Waterman <edward.waterman@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
console = "0.12.0"
crossbeam-channel = "0.4.4"
csv = "1.1.3"
ctrlc = "3.1.6"
structopt = "0.3.17"
time = "0.2.17"

[[bin]]
name = "track-work"
test = false
bench = false

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'